--- a/index.html
+++ b/index.html
@@ -2,230 +2,230 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
-  <title>ZOE | Transport et logistique</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
+    <title>ZOE | Transport et logistique</title>
 </head>
 
 <body>
 
-  <!-- Menu de navigation -->
-  <div class="hero">
-      <nav>
-          <img src="img/logo.png" alt="" class="logo">
-          <button class="menu-toggle" id="menu-toggle">
-              <i class="fas fa-bars"></i>
-          </button>
-          <ul class="menu-lg">
-              <li><a href="index.html">Accueil</a></li>
-              <li><a href="nos-services">Nos services</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="reserver.html">Réserver</a></li>
-          </ul>
-          <a href="login.html" class="button">Connexion</a>
-      </nav>
-      <div class="content">
-          <h1>Bienvenue chez <span>ZOE</span></h1>
-          <h3>Profiter d'un magnifique voyage avec nous !</h3>
-          <a href="" class="button">Résever maintenant</a>
-      </div>
-  </div>
-  <div class="nav-mobile">
-      <div class="btn-close-menu">
-          <button id="close-btn">
-              <i class="fas fa-close"></i>
-          </button>
-      </div>
-      <div class="menu-wrapper" id="menu-wrapper">
-          <ul>
-              <li><a href="index.html">Accueil</a></li>
-              <li><a href="nos-services">Nos services</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="reserver.html">Réserver</a></li>
-              <li><a href="login.html">Connexion</a></li>
-          </ul>
-      </div>
-  </div>
-  <!-- /Menu de navigation -->
+    <!-- Menu de navigation -->
+    <div class="hero">
+        <nav>
+            <img src="img/logo.png" alt="" class="logo">
+            <button class="menu-toggle" id="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </button>
+            <ul class="menu-lg">
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="reserver.html">Réserver</a></li>
+            </ul>
+            <a href="login.html" class="button">Connexion</a>
+        </nav>
+        <div class="content">
+            <h1>Bienvenue chez <span>ZOE</span></h1>
+            <h3>Profiter d'un magnifique voyage avec nous !</h3>
+            <a href="" class="button">Résever maintenant</a>
+        </div>
+    </div>
+    <div class="nav-mobile">
+        <div class="btn-close-menu">
+            <button id="close-btn">
+                <i class="fas fa-close"></i>
+            </button>
+        </div>
+        <div class="menu-wrapper" id="menu-wrapper">
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="reserver.html">Réserver</a></li>
+                <li><a href="login.html">Connexion</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- /Menu de navigation -->
 
 
-  <!-- A propos de zoe -->
-  <section class="about">
-      <div class="main">
-          <img src="img/about.png" alt="">
-          <div class="about-text">
-              <h2>Qui sommes-nous?</h2>
-              <h5><span>Transport</span> & <span>Logistique</span></h5>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, officia magni, in quam quia rerum
-                  animi explicabo, eos incidunt sint nihil aliquid. Exercitationem non quidem quia aliquam minus,
-                  neque blanditiis!
-                  Debitis molestiae qui esse optio sapiente earum architecto ad quam eaque, nobis ratione maxime nam
-                  veniam tenetur rem pariatur porro ab fugiat? Saepe ipsa modi dicta consequuntur sequi autem impedit.
-              </p>
-              <a href="" class="button">En savoir plus !</a>
-          </div>
-      </div>
-  </section>
-  <!-- /A propos de zoe -->
+    <!-- A propos de zoe -->
+    <section class="about">
+        <div class="main">
+            <img src="img/about.png" alt="">
+            <div class="about-text">
+                <h2>Qui sommes-nous?</h2>
+                <h5><span>Transport</span> & <span>Logistique</span></h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, officia magni, in quam quia rerum
+                    animi explicabo, eos incidunt sint nihil aliquid. Exercitationem non quidem quia aliquam minus,
+                    neque blanditiis!
+                    Debitis molestiae qui esse optio sapiente earum architecto ad quam eaque, nobis ratione maxime nam
+                    veniam tenetur rem pariatur porro ab fugiat? Saepe ipsa modi dicta consequuntur sequi autem impedit.
+                </p>
+                <a href="" class="button">En savoir plus !</a>
+            </div>
+        </div>
+    </section>
+    <!-- /A propos de zoe -->
 
-  <!-- loop -->
-  <section class="loop">
-      <video autoplay muted loop id="v1-loop">
-          <source src="img/ban.mp4" type="video/mp4">
-      </video>
-      <!-- Services -->
-      <div class="service">
-          <div class="title">
-              <h2>Nos Services</h2>
-          </div>
-          <div class="box">
-              <div class="card-box">
-                  <i class="fa-solid fa-bus"></i>
-                  <h5>Transport routier</h5>
-                  <div class="pra">
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus minima.
-                          Voluptate quos odit et, molestiae at amet libero .</p>
-                      <p><a href="" class="button">Lire la suite</a></p>
-                  </div>
-              </div>
-              <div class="card-box">
-                  <i class="fa-solid fa-truck"></i>
-                  <h5>Envoie de colis</h5>
-                  <div class="pra">
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus minima.
-                          Voluptate quos odit et, molestiae at amet libero .</p>
-                      <p><a href="" class="button">Lire la suite</a></p>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- /Services -->
-  </section>
-  <!-- /loop -->
+    <!-- loop -->
+    <section class="loop">
+        <video autoplay muted loop id="v1-loop">
+            <source src="img/ban.mp4" type="video/mp4">
+        </video>
+        <!-- Services -->
+        <div class="service">
+            <div class="title">
+                <h2>Nos Services</h2>
+            </div>
+            <div class="box">
+                <div class="card-box">
+                    <i class="fa-solid fa-bus"></i>
+                    <h5>Transport routier</h5>
+                    <div class="pra">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus minima.
+                            Voluptate quos odit et, molestiae at amet libero .</p>
+                        <p><a href="" class="button">Lire la suite</a></p>
+                    </div>
+                </div>
+                <div class="card-box">
+                    <i class="fa-solid fa-truck"></i>
+                    <h5>Envoie de colis</h5>
+                    <div class="pra">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus minima.
+                            Voluptate quos odit et, molestiae at amet libero .</p>
+                        <p><a href="" class="button">Lire la suite</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Services -->
+    </section>
+    <!-- /loop -->
 
-  <!-- Nos destinations -->
-  <section class="destination">
-      <div class="title">
-          <h2>Nos destinations</h2>
-      </div>
-      <div class="destination-content">
-          <div class="col-content">
-              <img src="img/destination/paysage_1.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-          <div class="col-content">
-              <img src="img/destination/paysage_2.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-          <div class="col-content">
-              <img src="img/destination/paysage_3.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-          <div class="col-content">
-              <img src="img/destination/paysage_4.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-          <div class="col-content">
-              <img src="img/destination/paysage_5.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-          <div class="col-content">
-              <img src="img/destination/paysage_6.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-          <div class="col-content">
-              <img src="img/destination/paysage_7.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-          <div class="col-content">
-              <img src="img/destination/paysage_8.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-          <div class="col-content">
-              <img src="img/destination/paysage_9.jpg" alt="">
-              <h5>Pointe-Noire</h5>
-              <p>La ville océane</p>
-          </div>
-      </div>
-  </section>
-  <!-- /Nos destinations -->
+    <!-- Nos destinations -->
+    <section class="destination">
+        <div class="title">
+            <h2>Nos destinations</h2>
+        </div>
+        <div class="destination-content">
+            <div class="col-content">
+                <img src="img/destination/paysage_1.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+            <div class="col-content">
+                <img src="img/destination/paysage_2.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+            <div class="col-content">
+                <img src="img/destination/paysage_3.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+            <div class="col-content">
+                <img src="img/destination/paysage_4.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+            <div class="col-content">
+                <img src="img/destination/paysage_5.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+            <div class="col-content">
+                <img src="img/destination/paysage_6.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+            <div class="col-content">
+                <img src="img/destination/paysage_7.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+            <div class="col-content">
+                <img src="img/destination/paysage_8.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+            <div class="col-content">
+                <img src="img/destination/paysage_9.jpg" alt="">
+                <h5>Pointe-Noire</h5>
+                <p>La ville océane</p>
+            </div>
+        </div>
+    </section>
+    <!-- /Nos destinations -->
 
-  <!-- Footer -->
-  <footer class="menu mt-4 px-3 pt-5 pb-3">
-      <div class="container">
-          <div class="row">
-              <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="footer-title">
-                      Qui sommes-nous ?
-                  </div>
-                  <div class="footer-description">
-                      ZOE T & L est agence de voyage basé sur le Transport routier.
-                  </div>
-              </div>
-              <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="footer-title">
-                      ZOE T & L
-                  </div>
-                  <div class="footer-description">
-                      <ul class="navbar-nav">
-                          <li class="footer-list">
-                              <a class="footer-link" aria-current="page" href="index.html">Accueil</a>
-                          </li>
-                          <li class="footer-list">
-                              <a class="footer-link" href="nos-services.html">Nos services</a>
-                          </li>
-                          <li class="footer-list">
-                              <a class="footer-link" href="contact.html">Contact</a>
-                          </li>
-                          <li class="footer-list">
-                              <a class="footer-link" href="reserver.html">Résever</a>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-sm-12 col-md-12 col-lg-4">
-                  <div class="footer-title">
-                      Nos zone de servies
-                  </div>
-                  <div class="footer-description">
-                      <ul class="navbar-nav">
-                          <li class="footer-list">
-                              Pointe-Noire
-                          </li>
-                          <li class="footer-list">
-                              Brazzaville
-                          </li>
-                          <li class="footer-list">
-                              Ouesso
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="copyright">
-          <p>&copy; Copyrights, ZOE T & L. Tous droits réservés.</p>
-      </div>
-  </footer>
-  <!-- /Footer -->
+    <!-- Footer -->
+    <footer class="menu mt-4 px-3 pt-5 pb-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="footer-title">
+                        Qui sommes-nous ?
+                    </div>
+                    <div class="footer-description">
+                        ZOE T & L est agence de voyage basé sur le Transport routier.
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="footer-title">
+                        ZOE T & L
+                    </div>
+                    <div class="footer-description">
+                        <ul class="navbar-nav">
+                            <li class="footer-list">
+                                <a class="footer-link" aria-current="page" href="index.html">Accueil</a>
+                            </li>
+                            <li class="footer-list">
+                                <a class="footer-link" href="nos-tarifs.html">Nos Tarifs</a>
+                            </li>
+                            <li class="footer-list">
+                                <a class="footer-link" href="contact.html">Contact</a>
+                            </li>
+                            <li class="footer-list">
+                                <a class="footer-link" href="reserver.html">Résever</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="footer-title">
+                        Nos zone de servies
+                    </div>
+                    <div class="footer-description">
+                        <ul class="navbar-nav">
+                            <li class="footer-list">
+                                Pointe-Noire
+                            </li>
+                            <li class="footer-list">
+                                Brazzaville
+                            </li>
+                            <li class="footer-list">
+                                Ouesso
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; Copyrights, ZOE T & L. Tous droits réservés.</p>
+        </div>
+    </footer>
+    <!-- /Footer -->
 
-  <script src="vendors/jquery/jquery-3.6.1.min.js"></script>
-  <script src="vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendors/font-awesome/js/all.min.js"></script>
-  <script src="js/main.js"></script>
+    <script src="vendors/jquery/jquery-3.6.1.min.js"></script>
+    <script src="vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendors/font-awesome/js/all.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
