--- a/contact.html
+++ b/contact.html
@@ -22,65 +22,49 @@
   <main>
     <!-- Menu de navigation -->
     <header class="header">
-      <nav class="navbar navbar-expand-lg menu">
-        <div class="container-fluid">
-          <a class="nav-logo" href="index.html">ZOE TRANSPORT</a>
-          <button class="navbar-toggler btn-shop" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="fa-solid fa-bars"></span>
-          </button>
-          <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarNav">
-            <div class="row w-75">
-              <div class="col-md-8">
-                <ul class="navbar-nav">
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="index.html">Accueil</a>
-                  </li>
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="about-us.html">Qui sommes-nous</a>
-                  </li>
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="reserver.html">Réserver</a>
-                  </li>
-                  <li class="nav-list">
-                    <a class="nav-link-zoe active" aria-current="page" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-4">
-                <ul class="navbar-nav justify-content-end">
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="javascript:void(0);" data-bs-toggle="modal"
-                      data-bs-target="#login">Connexion</a>
-                  </li>
-                  <li class="nav-list">
-                    <a class="nav-link-zoe" href="javascript:void(0);" data-bs-toggle="modal"
-                      data-bs-target="#register">S'inscrire</a>
-                  </li>
-                  <!-- <li class="nav-list">
-                    <a class="nav-link-zoe" href="#">Tableau de bord</a>
-                  </li> -->
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+      <nav>
+        <img src="img/logo.png" alt="" class="logo">
+        <button class="menu-toggle" id="menu-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="menu-lg">
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="reserver.html">Réserver</a></li>
+        </ul>
+        <a href="login.html" class="button">Connexion</a>
       </nav>
+      <div class="nav-mobile">
+        <div class="btn-close-menu">
+          <button id="close-btn">
+            <i class="fas fa-close"></i>
+          </button>
+        </div>
+        <div class="menu-wrapper" id="menu-wrapper">
+          <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="reserver.html">Réserver</a></li>
+            <li><a href="login.html">Connexion</a></li>
+          </ul>
+        </div>
     </header>
     <!-- /Menu de navigation -->
 
     <div class="banniere" data-setbg="img/ban.jpg">
       <div class="content">
-          <div class="reservation">
-            <div class="title">
-              <h2>Nous contacter</h2>
-            </div>
+        <div class="reservation">
+          <div class="title">
+            <h2>Contact</h2>
           </div>
+        </div>
       </div>
-  </div>
+    </div>
 
     <!-- Contact -->
-    <div class="container my-5">
+    <div class="container com-zephir">
       <div class="row">
         <div class="col-md-9 col-sm-12">
           <div class="contact">
@@ -136,8 +120,8 @@
               ZOE T & L Pointe-Noire
             </div>
             <div class="min-desc">
-              <p><span class="fa-solid fa-phone"></span> 0278932372</p>
-              <p><span class="fa-solid fa-envelope"></span> contact@zoe.com</p>
+              <p><span>Tel :</span> 0278932372</p>
+              <p><span>Mail :</span> contact@zoe.com</p>
             </div>
           </div>
           <div class="address mt-4">
@@ -145,93 +129,14 @@
               ZOE T & L Brazzaville
             </div>
             <div class="min-desc">
-              <p><span class="fa-solid fa-phone"></span> 0278932372</p>
-              <p><span class="fa-solid fa-envelope"></span> contact@zoe.com</p>
+              <p><span>Tel :</span> 0278932372</p>
+              <p><span>Mail :</span> contact@zoe.com</p>
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- /Contact -->
-
-    <!-- Modal Login -->
-    <div class="modal fade" id="login" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">S'identifier</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="login">
-              <form action="">
-                <div class="form-group">
-                  <label for="fullname">Nom d'utilisateur</label>
-                  <input type="text" name="fullname" id="fullname" placeholder="Nom d'utilisateur">
-                </div>
-                <div class="form-group">
-                  <label for="fullname">Mot de passe</label>
-                  <input type="password" name="fullname" id="fullname" placeholder="Mot de passe">
-                </div>
-                <div class="forgot">
-                  <a href="">Mot de passe oublié ?</a>
-                </div>
-                <div class="form-submit">
-                  <button>Se connecter <i class="fa-solid fa-right-to-bracket"></i></button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /Modal Login -->
-
-    <!-- Modal Register -->
-    <div class="modal fade" id="register" tabindex="-1" aria-labelledby="registrModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">S'enregister</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="login">
-              <form action="">
-                <div class="form-group">
-                  <label for="lastname">Nom</label>
-                  <input type="text" name="lastname" id="lastname" placeholder="Nom">
-                </div>
-                <div class="form-group">
-                  <label for="firstname">Prénom</label>
-                  <input type="text" name="firstname" id="firstname" placeholder="Prénom">
-                </div>
-                <div class="form-group">
-                  <label for="firstname">Email</label>
-                  <input type="email" name="email" id="email" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <label for="pwd">Mot de passe</label>
-                  <input type="password" name="pwd" id="pwd" placeholder="Mot de passe">
-                </div>
-                <div class="form-group">
-                  <label for="conf-pwd">Confirmez mot de passe</label>
-                  <input type="password" name="conf-pwd" id="conf-pwd" placeholder="Confirmez mot de passe">
-                </div>
-                <div class="form-group-check">
-                  <input type="checkbox" name="user-cond" id="user-cond">
-                  <label for="user-cond">J'accepte <a href="javascrip:void(0);">les conditions d'utilisation</a></label>
-                </div>
-                <div class="form-submit">
-                  <button>S'inscire</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /Modal Register -->
 
     <!-- Footer -->
     <footer class="menu mt-4 px-3 pt-5 pb-3">
@@ -255,10 +160,13 @@
                   <a class="footer-link" aria-current="page" href="index.html">Accueil</a>
                 </li>
                 <li class="footer-list">
-                  <a class="footer-link" href="about-us.html">Qui sommes-nous</a>
+                  <a class="footer-link" href="nos-tarifs.html">Nos Tarifs</a>
                 </li>
                 <li class="footer-list">
                   <a class="footer-link" href="contact.html">Contact</a>
+                </li>
+                <li class="footer-list">
+                  <a class="footer-link" href="reserver.html">Résever</a>
                 </li>
               </ul>
             </div>
