--- a/reserver.html
+++ b/reserver.html
@@ -22,52 +22,34 @@
     <main>
         <!-- Menu de navigation -->
         <header class="header">
-            <nav class="navbar navbar-expand-lg menu">
-                <div class="container-fluid">
-                    <a class="nav-logo" href="index.html">ZOE TRANSPORT</a>
-                    <button class="navbar-toggler btn-shop" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="fa-solid fa-bars"></span>
-                    </button>
-                    <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarNav">
-                        <div class="row w-75">
-                            <div class="col-md-8">
-                                <ul class="navbar-nav">
-                                    <li class="nav-list">
-                                        <a class="nav-link-zoe" href="index.html">Accueil</a>
-                                    </li>
-                                    <li class="nav-list">
-                                        <a class="nav-link-zoe" href="about-us.html">Qui sommes-nous</a>
-                                    </li>
-                                    <li class="nav-list">
-                                        <a class="nav-link-zoe active" aria-current="page"
-                                            href="reserver.html">Réserver</a>
-                                    </li>
-                                    <li class="nav-list">
-                                        <a class="nav-link-zoe" href="contact.html">Contact</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-4">
-                                <ul class="navbar-nav justify-content-end">
-                                    <li class="nav-list">
-                                        <a class="nav-link-zoe" href="javascript:void(0);" data-bs-toggle="modal"
-                                            data-bs-target="#login">Connexion</a>
-                                    </li>
-                                    <li class="nav-list">
-                                        <a class="nav-link-zoe" href="javascript:void(0);" data-bs-toggle="modal"
-                                            data-bs-target="#register">S'inscrire</a>
-                                    </li>
-                                    <!-- <li class="nav-list">
-                    <a class="nav-link-zoe" href="#">Tableau de bord</a>
-                  </li> -->
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <nav>
+                <img src="img/logo.png" alt="" class="logo">
+                <button class="menu-toggle" id="menu-toggle">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <ul class="menu-lg">
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="reserver.html">Réserver</a></li>
+                </ul>
+                <a href="login.html" class="button">Connexion</a>
             </nav>
+            <div class="nav-mobile">
+                <div class="btn-close-menu">
+                    <button id="close-btn">
+                        <i class="fas fa-close"></i>
+                    </button>
+                </div>
+                <div class="menu-wrapper" id="menu-wrapper">
+                    <ul>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="nos-tarifs.html">Nos Tarifs</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="reserver.html">Réserver</a></li>
+                        <li><a href="login.html">Connexion</a></li>
+                    </ul>
+                </div>
         </header>
         <!-- /Menu de navigation -->
 
@@ -75,182 +57,72 @@
             <div class="content">
                 <div class="reservation">
                     <div class="title">
-                        <h2>Réserver dès maintenant</h2>
+                        <h2>Réservation</h2>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- about-us -->
-        <div class="container about-us">
-            <div class="ticket">
+        <!-- reservation -->
+        <div class="container com-zephir">
+            <div>
+                <h5>Réserver dès maintenant</h5>
                 <form action="" class="row">
-                    <div class="col-sm-12 col-md-6">
+                    <div class="col-md-6">
                         <div class="form-group">
-                          <label for="fullname">Nom complet</label>
-                          <input type="text" name="fullname" id="fullname" placeholder="Nom d'utilisateur">
+                            <label for="full_name">Nom complet</label>
+                            <input type="text" id="full_name" name="full_name">
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6">                       
+                    <div class="col-md-6">
                         <div class="form-group">
-                          <label for="date-start">Date de départ</label>
-                          <input type="date" name="date-start" id="date-start">
+                            <label for="phone">Téléphone</label>
+                            <input type="tel" id="phone" name="phone">
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6">                        
+                    <div class="col-md-6">
                         <div class="form-group">
-                          <label for="city-start">Ville de départ</label>
-                          <select name="city-start" id="city-start">
-                            <option value="">--- Sélectionnez ville de départ---</option>
-                            <optgroup label="Zone Sud">
-                              <option value="">Pointe-Noire</option>
-                            </optgroup>
-                            <optgroup label="Zone Nord">
-                              <option value="">Brazzaville</option>
-                            </optgroup>
-                          </select>
+                            <label for="city_start">Départ</label>
+                            <select name="city_start" id="city_start">
+                                <option value="0">Sélectionner une ville</option>
+                                <option value="1">Pointe-Noire</option>
+                                <option value="2">Brazzaville</option>
+                                <option value="3">Dolisie</option>
+                                <option value="4">Nkayi</option>
+                            </select>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6">                        
+                    <div class="col-md-6">
                         <div class="form-group">
-                          <label for="station-start">Gare de départ</label>
-                          <select name="station-start" id="station-start">
-                            <option value="">--- Gare de départ---</option>
-                            <option value="">Ngoyo</option>
-                            <option value="">Tie-Tie</option>
-                            <option value="">O.C.H</option>
-                            <option value="">Siafoumou</option>
-                            <option value="">Plateau</option>
-                            <option value="">Mfilou</option>
-                            <option value="">Mikalou</option>
-                            <option value="">Ouenze</option>
-                          </select>
+                            <label for="city_end">Destination</label>
+                            <select name="city_end" id="city_end">
+                                <option value="0">Sélectionner une ville</option>
+                                <option value="1">Pointe-Noire</option>
+                                <option value="2">Brazzaville</option>
+                                <option value="3">Dolisie</option>
+                                <option value="4">Nkayi</option>
+                            </select>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6">                       
+                    <div class="col-md-6">
                         <div class="form-group">
-                          <label for="city-end">Ville d'arrivée</label>
-                          <select name="city-end" id="city-end">
-                            <option value="">--- Sélectionnez ville d'arrivée'---</option>
-                            <optgroup label="Zone Sud">
-                              <option value="">Pointe-Noire</option>
-                            </optgroup>
-                            <optgroup label="Zone Nord">
-                              <option value="">Brazzaville</option>
-                            </optgroup>
-                          </select>
+                            <label for="date_start">Date départ</label>
+                            <input type="date" id="date_start" name="date_start">
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6">                        
+                    <div class="col-md-6">
                         <div class="form-group">
-                          <label for="station-end">Gare d'arrivée</label>
-                          <select name="station-end" id="station-end">
-                            <option value="">--- Gare d'arrivée---</option>
-                            <option value="">Ngoyo</option>
-                            <option value="">Tie-Tie</option>
-                            <option value="">O.C.H</option>
-                            <option value="">Siafoumou</option>
-                            <option value="">Plateau</option>
-                            <option value="">Mfilou</option>
-                            <option value="">Mikalou</option>
-                            <option value="">Ouenze</option>
-                          </select>
+                            <label for="nbr_passager">Nombre de passager</label>
+                            <input type="number" min="1" id="nbr_passager" name="nbr_passager">
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6">                        
-                        <div class="form-group">
-                          <label for="nbr-passenger">Nombre passager</label>
-                          <input type="number" name="nbr-passenger" id="nbr-passenger" min="1" value="1">
-                        </div>
+                    <div class="form-submit">
+                        <button type="submit">Réserver</button>
                     </div>
-                  <div class="form-submit">
-                    <button>Réserver</button>
-                  </div>
                 </form>
-              </div>
-        </div>
-        <!-- /about-us -->
-
-        <!-- Modal Login -->
-        <div class="modal fade" id="login" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">S'identifier</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="login">
-                            <form action="">
-                                <div class="form-group">
-                                    <label for="fullname">Nom d'utilisateur</label>
-                                    <input type="text" name="fullname" id="fullname" placeholder="Nom d'utilisateur">
-                                </div>
-                                <div class="form-group">
-                                    <label for="fullname">Mot de passe</label>
-                                    <input type="password" name="fullname" id="fullname" placeholder="Mot de passe">
-                                </div>
-                                <div class="forgot">
-                                    <a href="">Mot de passe oublié ?</a>
-                                </div>
-                                <div class="form-submit">
-                                    <button>Se connecter <i class="fa-solid fa-right-to-bracket"></i></button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
-        <!-- /Modal Login -->
-
-        <!-- Modal Register -->
-        <div class="modal fade" id="register" tabindex="-1" aria-labelledby="registrModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">S'enregister</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="login">
-                            <form action="">
-                                <div class="form-group">
-                                    <label for="lastname">Nom</label>
-                                    <input type="text" name="lastname" id="lastname" placeholder="Nom">
-                                </div>
-                                <div class="form-group">
-                                    <label for="firstname">Prénom</label>
-                                    <input type="text" name="firstname" id="firstname" placeholder="Prénom">
-                                </div>
-                                <div class="form-group">
-                                    <label for="firstname">Email</label>
-                                    <input type="email" name="email" id="email" placeholder="Email">
-                                </div>
-                                <div class="form-group">
-                                    <label for="pwd">Mot de passe</label>
-                                    <input type="password" name="pwd" id="pwd" placeholder="Mot de passe">
-                                </div>
-                                <div class="form-group">
-                                    <label for="conf-pwd">Confirmez mot de passe</label>
-                                    <input type="password" name="conf-pwd" id="conf-pwd"
-                                        placeholder="Confirmez mot de passe">
-                                </div>
-                                <div class="form-group-check">
-                                    <input type="checkbox" name="user-cond" id="user-cond">
-                                    <label for="user-cond">J'accepte <a href="javascrip:void(0);">les conditions
-                                            d'utilisation</a></label>
-                                </div>
-                                <div class="form-submit">
-                                    <button>S'inscire</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /Modal Register -->
+        <!-- /reservation -->
 
         <!-- Footer -->
         <footer class="menu mt-4 px-3 pt-5 pb-3">
@@ -274,10 +146,13 @@
                                     <a class="footer-link" aria-current="page" href="index.html">Accueil</a>
                                 </li>
                                 <li class="footer-list">
-                                    <a class="footer-link" href="about-us.html">Qui sommes-nous</a>
+                                    <a class="footer-link" href="nos-tarifs.html">Nos Tarifs</a>
                                 </li>
                                 <li class="footer-list">
                                     <a class="footer-link" href="contact.html">Contact</a>
+                                </li>
+                                <li class="footer-list">
+                                    <a class="footer-link" href="reserver.html">Résever</a>
                                 </li>
                             </ul>
                         </div>
