--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="pra">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus minima.
                             Voluptate quos odit et, molestiae at amet libero .</p>
-                        <p><a href="" class="button">Lire la suite</a></p>
+                        <!-- <p><a href="" class="button">Lire la suite</a></p> -->
                     </div>
                 </div>
                 <div class="card-box">
@@ -99,7 +99,7 @@
                     <div class="pra">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus minima.
                             Voluptate quos odit et, molestiae at amet libero .</p>
-                        <p><a href="" class="button">Lire la suite</a></p>
+                        <!-- <p><a href="" class="button">Lire la suite</a></p> -->
                     </div>
                 </div>
             </div>
